[metadata]
name = toolchest
author = Red Hat
author_email = lhh@redhat.com
maintainer = Lon Hohberger
maintainer_email = lon@metamorphism.com
description = toolchest is a collection of generic functions for release-depot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/release-depot/toolchest
project_urls =
    Bug Tracker = https://github.com/release-depot/toolchest/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    toolchest

[options]
package_dir =
    = .
packages = find:
install_requires =
    pyyaml

[options.extras_require]
devbase =
    tox

test =
    flake8
    pytest
    pytest-cov
    pytest-datadir

docs =
    sphinx==4.3.1
    sphinx-autobuild==2021.3.14
    sphinx-rtd-theme==0.5.2
    myst-parser==0.15.2

dist =
    build
    setuptools_scm
    twine

[flake8]
exclude = docs
